--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+MAKECOMMERCE_ENVIRONMENT="test"
+MAKECOMMERCE_SHOP_ID=""
+MAKECOMMERCE_PUBLIC_KEY=""
+MAKECOMMERCE_SECRET_KEY=""
