--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "lucasdotvin/laravel-soulbscription": "^4.2",
+        "maksekeskus/maksekeskus-php": "^1.4",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-data": "^4.8",
         "spatie/laravel-medialibrary": "^11.11",
