--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,6 @@ MAKECOMMERCE_ENVIRONMENT="test"
 MAKECOMMERCE_SHOP_ID=""
 MAKECOMMERCE_PUBLIC_KEY=""
 MAKECOMMERCE_SECRET_KEY=""
+
+LOCAL_NODE_PATH=
+LOCAL_NPM_PATH=
