--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-data": "^4.8",
         "spatie/laravel-medialibrary": "^11.11",
+        "spatie/laravel-pdf": "^1.5",
         "spatie/laravel-permission": "^6.14",
         "spatie/laravel-query-builder": "^6.0",
         "spatie/laravel-typescript-transformer": "^2.4"
