--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,21 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 OMNISEND_API_KEY=
+
+LITECOM_PRIMARY_BASE_URL=
+LITECOM_PRIMARY_TOKEN=
+LITECOM_PRIMARY_TIMEOUT=10
+LITECOM_PRIMARY_RETRIES=2
+LITECOM_PRIMARY_MQTT_HOST=
+LITECOM_PRIMARY_MQTT_PORT=
+LITECOM_PRIMARY_MQTT_USERNAME=
+LITECOM_PRIMARY_MQTT_PASSWORD=
+
+LITECOM_SECONDARY_BASE_URL=
+LITECOM_SECONDARY_TOKEN=
+LITECOM_SECONDARY_TIMEOUT=10
+LITECOM_SECONDARY_RETRIES=2
+LITECOM_SECONDARY_MQTT_HOST=
+LITECOM_SECONDARY_MQTT_PORT=
+LITECOM_SECONDARY_MQTT_USERNAME=
+LITECOM_SECONDARY_MQTT_PASSWORD=
