--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.9",
         "lucasdotvin/laravel-soulbscription": "^4.2",
         "maksekeskus/maksekeskus-php": "^1.4",
+        "php-mqtt/client": "^1.7",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-data": "^4.17",
         "spatie/laravel-medialibrary": "^11.11",
