--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/socialite": "^5.20",
         "laravel/tinker": "^2.9",
         "lucasdotvin/laravel-soulbscription": "^4.2",
+        "maatwebsite/excel": "^3.1",
         "maksekeskus/maksekeskus-php": "^1.4",
         "php-mqtt/client": "^1.7",
         "spatie/laravel-activitylog": "^4.8",
